--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,15 @@ jar {
     }
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
+}
+
 repositories {
     mavenCentral()
 }
